--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@types/node": "^16.18.12",
     "@types/react": "^18.0.27",
     "@ya.praktikum/react-developer-burger-ui-components": "^1.14.0",
+    "axios": "^1.3.5",
+    "mem": "^9.0.2",
     "react": "^18.2.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
