--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.3.5",
     "mem": "^9.0.2",
     "react": "^18.2.0",
+    "react-contenteditable": "^3.3.7",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
