--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,7 +23,14 @@
   },
   "plugins": ["react", "jsx-a11y"],
   "rules": {
-    "react/jsx-filename-extension": "off", //[1, { "extensions": [".js", ".jsx"] }]
+    "react/jsx-filename-extension": "off",
+    "react/prop-types": "off",
+    "@typescript-eslint/no-unsafe-assignment": "off",
+    "@typescript-eslint/no-unsafe-member-access": "off",
+    "@typescript-eslint/no-unsafe-return": "off",
+    "@typescript-eslint/no-unsafe-call": "off",
+    "@typescript-eslint/no-unsafe-argument": "off",
+    "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/ban-ts-comment": [
       "error",
       {
