--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@ya.praktikum/react-developer-burger-ui-components": "^1.14.0",
     "axios": "^1.3.5",
     "mem": "^9.0.2",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-contenteditable": "^3.3.7",
     "react-dnd": "^16.0.1",
