--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,12 +25,12 @@
   "rules": {
     "react/jsx-filename-extension": "off",
     "react/prop-types": "off",
-    //"@typescript-eslint/no-unsafe-assignment": "off",
-    //"@typescript-eslint/no-unsafe-member-access": "off",
-    //"@typescript-eslint/no-unsafe-return": "off",
-    //"@typescript-eslint/no-unsafe-call": "off",
-    //"@typescript-eslint/no-unsafe-argument": "off",
-    //"@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/no-unsafe-assignment": "off",
+    "@typescript-eslint/no-unsafe-member-access": "off",
+    "@typescript-eslint/no-unsafe-return": "off",
+    "@typescript-eslint/no-unsafe-call": "off",
+    "@typescript-eslint/no-unsafe-argument": "off",
+    "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/restrict-template-expressions": "off"
     /*"@typescript-eslint/ban-ts-comment": [
       "error",
