--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,10 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "noImplicitAny": false
+    "noImplicitAny": false,
+    "types": ["node", "jest", "@types/testing-library__jest-dom"],
+    "baseUrl": "src"
   },
-  "include": ["src"]
+  "include": ["src"],
+  "exclude": ["cypress.config.ts", "cypress", "node_modules"]
 }
