--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,9 +27,11 @@
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": "latest",
-    "sourceType": "module"
-    //"project": "./tsconfig.json"
+    "sourceType": "module",
+    "project": "tsconfig.json"
+    //"tsconfigRootDir": "__dirname"
   },
+  "ignorePatterns": ["cypress.config.ts"],
   "plugins": ["react", "jsx-a11y", "cypress"],
   "rules": {
     "react/jsx-filename-extension": "off",
