--- a/cypress/.eslintrc.json
+++ b/cypress/.eslintrc.json
@@ -2,13 +2,16 @@
   "env": {
     "cypress/globals": true
   },
+  "parserOptions": {
+    "project": ["cypress/tsconfig.json"]
+  },
   "plugins": ["cypress"],
   "extends": ["plugin:cypress/recommended"],
   "rules": {
     "cypress/no-assigning-return-values": "error",
-    "cypress/no-unnecessary-waiting": "error",
+    "cypress/no-unnecessary-waiting": "off",
     "cypress/assertion-before-screenshot": "warn",
-    "cypress/no-force": "warn",
+    "cypress/no-force": "off",
     "cypress/no-async-tests": "error",
     "cypress/no-pause": "error"
   }
