--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -13,6 +13,6 @@
     "lib": ["es2015", "es2017", "dom"],
     "types": ["cypress", "node"]
   },
-  "include": ["**/*.ts", "**/*.cy.js", "support/*.ts"],
+  "include": ["../cypress.config.ts", "**/*.ts", "**/*.cy.js", "support/*.ts"],
   "exclude": ["node_modules"]
 }
